[package]
name = "memory-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
test-servers = { path = "../test-servers" }

anyhow = "1"
opentelemetry-proto = "0.5"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
